2010-03-12  Nicola Pero  <nicola.pero@meta-innovation.com>

	The default is now to use -Wall when compiling C/ObjC/C++/ObjC++
	unless warn=no is used when invoking make.  Similar for Java,
	where -deprecation is now used unless warn=no is used.
	* common.make (ADDITIONAL_FLAGS): Add -Wall or not depending on
	warn=yes/no, instead of depending on debug=yes/no (Suggestion from
	Richard Frith-Macdonald).
	(INTERNAL_JAVACFLAGS): Same for -deprecation.
	* Documentation/releasenotes.texi: Updated.
	* RELEASENOTES: Regenerated.
	
2010-03-07  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/README.MinGW: Updated.

2010-03-06  Nicola Pero  <nicola.pero@meta-innovation.com>

	* target.make (SHARED_LIB_LINK_CMD): On MinGW, pass
	--export-all-symbols to the linker.  This fixes building
	gnustep-base on MinGW with more recent libraries.
	* Documentation/README.MinGW: Updated instructions to work with
	more recent versions - up to building gnustep-base.
	
2010-03-06  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/Documentation/javadoc.make (JAVADOC_BUILD_ALWAYS):
	Recognize 'yes' (which is consistent with all other variables) as
	well as 'YES' (still recognized for backwards-compatibility).
	* Master/rpm.make (PACKAGE_NEEDS_CONFIGURE): Recognize
	'yes' (which is consistent with all other variables) as well as
	'YES' (still recognized for backwards-compatibility).
	* Documentation/releasenotes.texi: Updated.

2010-03-06  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac: Check for GNU make >= 3.79 and emit a warning if
	it's not found.  Fixed typo in check for $(info ...).
	* configure: Regenerated.
	* Documentation/releasenotes.texi: Mention that versions of GNU
	Make older than 3.79.1 (released June 2000) are no longer
	supported.
	
2010-02-18  Adam Fedor  <fedor@gnu.org>

	* Documentation/{gnustep-howto.texi,gnustep-machines.texi,GNUmakefile}:
	Deprecate the machines.texi file
