@@ -185,6 +185,11 @@ AUTO_DEPENDENCIES = @AUTO_DEPENDENCIES@
 USE_OBJC_EXCEPTIONS = @USE_OBJC_EXCEPTIONS@
 
 #
+# Whether the ObjC compiler supports -fobjc-nonfragile-abi
+#
+USE_NONFRAGILE_ABI = @USE_NONFRAGILE_ABI@
+
+#
 # Whether we are using the ObjC garbage cllection library.
 #
 OBJC_WITH_GC = @OBJC_WITH_GC@
